--- a/app/src/main/res/menu/overflow.xml
+++ b/app/src/main/res/menu/overflow.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/item_cerrar"
+        android:icon="@android:drawable/presence_offline"
+        android:title="@string/cerrar_sesion"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/item_salir"
+        android:icon="@android:drawable/ic_lock_power_off"
+        android:title="@string/salir_app" />
 
     <item
         android:id="@+id/item_micuenta"
+        android:icon="@drawable/baseline_account_circle_white_18dp"
         android:title="@string/mi_cuenta"
-        android:icon="@android:drawable/ic_dialog_info"/>
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/item_crear"
+        android:icon="@drawable/baseline_pets_white_18dp"
         android:title="@string/crear_p"
-        android:icon="@android:drawable/ic_input_add"/>
+        app:showAsAction="always" />
     <item
         android:id="@+id/item_buscar"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="@string/buscar_p"
-        android:icon="@android:drawable/ic_menu_search"/>
-    <item
-        android:id="@+id/item_cerrar"
-        android:title="@string/cerrar_sesion"
-        android:icon="@android:drawable/presence_offline"/>
-    <item
-        android:id="@+id/item_salir"
-        android:title="@string/salir_app"
-        android:icon="@android:drawable/ic_lock_power_off"/>
+        app:showAsAction="always" />
 </menu>
