--- a/app/src/main/res/layout/ventana_inicio.xml
+++ b/app/src/main/res/layout/ventana_inicio.xml
@@ -20,8 +20,8 @@
         android:layout_width="197dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:background="#5BA2DB"
+        android:layout_marginLeft="90dp"
+        android:background="@drawable/rounded_blue"
         android:onClick="Comenzar"
         android:padding="10dp"
         android:text="@string/botonComenzar"
