--- a/app/src/main/res/layout/ventana_buscar_perfil.xml
+++ b/app/src/main/res/layout/ventana_buscar_perfil.xml
@@ -18,7 +18,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#63B978"
+                android:background="#FF9800"
                 android:gravity="center"
                 android:padding="15dp"
                 android:text="@string/tituloBuscarPerfil"
@@ -144,7 +144,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="100dp"
                 android:layout_marginBottom="30dp"
-                android:background="#5BA2DB"
+                android:background="@drawable/rounded_blue"
                 android:onClick="RealizarBusqueda"
                 android:padding="10dp"
                 android:text="@string/realizarBusqueda"
