--- a/app/src/main/res/layout/ventana_crear_perfil.xml
+++ b/app/src/main/res/layout/ventana_crear_perfil.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#63B978"
+                android:background="#FF9800"
                 android:gravity="center"
                 android:padding="15dp"
                 android:text="@string/tituloPerfil"
@@ -165,7 +165,7 @@
                 android:layout_marginLeft="90dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="90dp"
-                android:background="#5BA2DB"
+                android:background="@drawable/rounded_blue"
                 android:padding="10dp"
                 android:text="@string/perfil_insertarFoto"
                 android:textColor="#FFFFFF"
@@ -180,7 +180,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="70dp"
                 android:layout_marginBottom="30dp"
-                android:background="#5BA2DB"
+                android:background="@drawable/rounded_blue"
                 android:onClick="RegistrarPerfil"
                 android:text="@string/registroPerfil"
                 android:textColor="#FFFFFF"
