--- a/app/src/main/res/layout/ventana_cuenta.xml
+++ b/app/src/main/res/layout/ventana_cuenta.xml
@@ -6,6 +6,17 @@
     tools:context=".VentanaCuenta"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FF9800"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="@string/mi_cuenta"
+        android:textColor="#FFFFFF"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <TextView
         android:layout_width="wrap_content"
