--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF9800</color>
+    <color name="colorPrimary">#DA4E1F</color>
     <color name="colorPrimaryDark">#D53F0E</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
