Añadido acceso a la galeria, carga de imagen, almacenamiento en la BD y visualización tanto en la lista de coincidencias como en el perfil consultado

--- a/app/src/main/res/layout/ventana_crear_perfil.xml
+++ b/app/src/main/res/layout/ventana_crear_perfil.xml
@@ -172,6 +172,13 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/imgMascota"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp" />
+
             <Button
                 android:id="@+id/registra_perfil"
                 android:layout_width="match_parent"
