--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,9 +5,11 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/imgFoto"
         android:layout_width="100dp"
         android:layout_height="70dp"
-        android:id="@+id/imgFoto"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
