--- a/app/src/main/res/layout/ventana_ver_perfil.xml
+++ b/app/src/main/res/layout/ventana_ver_perfil.xml
@@ -28,6 +28,7 @@
             android:id="@+id/e_m"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:textAlignment="center"
@@ -37,6 +38,7 @@
             android:id="@+id/g_m"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:textAlignment="center"
@@ -46,6 +48,7 @@
             android:id="@+id/r_m"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:textAlignment="center"
@@ -55,6 +58,7 @@
             android:id="@+id/t_m"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:textAlignment="center"
@@ -64,15 +68,7 @@
             android:id="@+id/ed_m"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:textAlignment="center"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/c_m"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:textAlignment="center"
@@ -82,8 +78,19 @@
             android:id="@+id/f_m"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/perrito_perdido"
-            android:contentDescription="@string/descripcion_perrito"/>
+            android:layout_marginTop="20dp"
+            android:contentDescription="@string/descripcion_perrito" />
+
+        <TextView
+            android:id="@+id/c_m"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:textAlignment="center"
+            android:textSize="20sp" />
 
 
     </LinearLayout>
