--- a/app/src/main/res/layout/ventana_crear_perfil.xml
+++ b/app/src/main/res/layout/ventana_crear_perfil.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +26,7 @@
                 android:padding="15dp"
                 android:text="@string/tituloPerfil"
                 android:textColor="#FFFFFF"
-                android:textSize="35sp"
+                android:textSize="28sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -177,7 +178,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/imagen_predeterminada"/>
 
             <Button
                 android:id="@+id/registra_perfil"
