--- a/app/src/main/res/layout/ventana_inicio.xml
+++ b/app/src/main/res/layout/ventana_inicio.xml
@@ -9,17 +9,18 @@
     tools:context=".VentanaInicio">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="471dp"
-        android:contentDescription="@string/descripcion_img"
         android:paddingTop="20dp"
-        app:srcCompat="@drawable/primera_img_app" />
+        android:contentDescription="@string/descripcion_img"
+        app:srcCompat="@drawable/primera_img_app2" />
 
     <Button
         android:id="@+id/comenzar"
         android:layout_width="197dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="90dp"
         android:layout_marginLeft="90dp"
         android:background="@drawable/rounded_blue"
         android:onClick="Comenzar"
