--- a/app/src/main/res/layout/ventana_inicio.xml
+++ b/app/src/main/res/layout/ventana_inicio.xml
@@ -4,30 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC531"
+    android:background="#FFC90E"
     android:orientation="vertical"
     tools:context=".VentanaInicio">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="471dp"
-        android:paddingTop="20dp"
-        android:contentDescription="@string/descripcion_img"
-        app:srcCompat="@drawable/primera_img_app2" />
 
-    <Button
-        android:id="@+id/comenzar"
-        android:layout_width="197dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="90dp"
-        android:background="@drawable/rounded_blue"
-        android:onClick="Comenzar"
-        android:padding="10dp"
-        android:text="@string/botonComenzar"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#000000"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="471dp"
+                android:contentDescription="@string/descripcion_img"
+                android:paddingTop="20dp"
+                app:srcCompat="@drawable/primera_img_app2" />
+
+            <Button
+                android:id="@+id/comenzar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="90dp"
+                android:layout_marginRight="90dp"
+                android:layout_marginBottom="40dp"
+                android:background="@drawable/rounded_blue"
+                android:onClick="Comenzar"
+                android:padding="10dp"
+                android:text="@string/botonComenzar"
+                android:textColor="#FFFFFF"
+                android:textColorHighlight="#000000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
