Agrupacion de las Activities en un paquete. Boton de enviar datos añadido

--- a/app/src/main/res/layout/ventana_inicio.xml
+++ b/app/src/main/res/layout/ventana_inicio.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFC90E"
     android:orientation="vertical"
-    tools:context=".VentanaInicio">
+    tools:context=".Ventanas.VentanaInicio">
 
 
     <ScrollView
