--- a/app/src/main/res/layout/ventana_ver_perfil.xml
+++ b/app/src/main/res/layout/ventana_ver_perfil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VentanaVerPerfil">
+    tools:context=".Ventanas.VentanaVerPerfil">
 
 
     <LinearLayout
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#FFFFFF"
-            android:textSize="40sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:typeface="serif" />
 
@@ -92,6 +92,23 @@
             android:paddingRight="30dp"
             android:textAlignment="center"
             android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/boton_enviar_datos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/rounded_blue"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/enviarDatos"
+            android:textColor="#FFFFFF"
+            android:textColorHighlight="#000000"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
