--- a/app/src/main/res/layout/fragment_ver_perfiles.xml
+++ b/app/src/main/res/layout/fragment_ver_perfiles.xml
@@ -4,23 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ventanas.VentanaVerPerfil">
-
+    tools:context=".Ventanas.FragmentVerPerfiles">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
+        android:orientation="vertical">
         <TextView
             android:id="@+id/n_m"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FF9800"
+            android:background="#8BC34A"
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#FFFFFF"
-            android:textSize="30sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:typeface="serif" />
 
@@ -93,22 +91,7 @@
             android:textAlignment="center"
             android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/boton_enviar_datos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="100dp"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/rounded_blue"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="@string/enviarDatos"
-            android:textColor="#FFFFFF"
-            android:textColorHighlight="#000000"
-            android:textSize="22sp"
-            android:textStyle="bold" />
     </LinearLayout>
+
 
 </ScrollView>
