Se realizó la actualización para la presentación.

--- a/app/src/main/res/layout/ventana_seleccion_perfil.xml
+++ b/app/src/main/res/layout/ventana_seleccion_perfil.xml
@@ -91,6 +91,24 @@
             android:textAlignment="center"
             android:textSize="20sp" />
 
+        <Button
+            android:id="@+id/boton_eliminar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/rounded_blue"
+            android:gravity="center"
+            android:onClick="EliminarPerfil"
+            android:padding="10dp"
+            android:text="@string/eliminar"
+            android:textColor="#FFFFFF"
+            android:textColorHighlight="#000000"
+            android:textSize="22sp"
+            android:textStyle="bold" /> />
+
     </LinearLayout>
 
 
